[workspace]
members = ["demo"]

[package]
name = "twilight_wgpu_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
pollster = "0.4.0"
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
wgpu = { version = "23.0.0", features = ["webgpu"] }
winit = "0.30.5"
