[package]
name = "twilight_wgpu_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
pollster = "0.4.0"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "Document",
    "Window",
    "Element",
]}
wgpu = { version = "23.0.0", features = ["webgpu"] }
winit = "0.30.5"
